make services and about section side by side on computer. going to try changing the font sizes

--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,7 @@ h1 {
 	display: flex;
 	flex: 1 1 33.333%;
 	align-items: center;
+	overflow-x: hidden;
 }
 
 #mainImage img {
@@ -110,6 +111,21 @@ h1 {
 
 .active {
 	border-bottom: 3px solid white;
+}
+
+#services {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#services div {
+	flex: 1 1 50%;
+	min-width: 315px;
+}
+
+#services div:first-of-type {
+	padding-right: 10px;
+	padding-bottom: 25px;
 }
 
 #photos .images .column {
