--- a/public/style.css
+++ b/public/style.css
@@ -14,8 +14,7 @@ body {
 	line-height: 1.45;
 	color: white;
 	text-align: center;
-/*	overflow-x: hidden;
-*/}
+}
 
 p {
 	margin-bottom: 1.3em;
@@ -28,7 +27,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-size: 3.998em;
+	font-size: 3.998rem;
 	font-family: 'Michroma', sans-serif;
 	letter-spacing: 5px;
 	margin: 20px auto 0;
@@ -36,16 +35,16 @@ h1 {
 }
 
 h2 {
-	font-size: 2.827em;
+	font-size: 2.827rem;
 }
 
 h3 {
-	font-size: 1.999em;
+	font-size: 1.999rem;
 	font-weight: bold;
 }
 
 h4, p {
-	font-size: 1.414em;
+	font-size: 1.414rem;
 }
 
 a {
@@ -74,6 +73,7 @@ a {
 	text-align: center;
 	padding: 12px 6px;
 	text-decoration: none;
+	font-size: 1.414rem;
 }
 
 #links i {
@@ -225,25 +225,25 @@ footer p a:hover {
 
 @media only screen and (min-width: 400px) {
 	html {
-		font-size: 6.4px;
+		font-size: 9px;
 	}
 }
 
 @media only screen and (min-width: 550px) {
 	html {
-		font-size: 8px;
+		font-size: 10px;
 	}
 }
 
 @media only screen and (min-width: 700px) {
 	html {
-		font-size: 9.6px;
+		font-size: 11px;
 	}
 }
 
 @media only screen and (min-width: 1000px) {
 	html {
-		font-size: 10px;
+		font-size: 12px;
 	}
 }
 
