--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 html {
-	font-size: 6px;
+	font-size: 9px;
 }
 
 body {
@@ -154,7 +154,7 @@ a {
 	margin-top: 1rem;
 	display: flex;
 	flex-direction: column;
-	flex: 1 1 calc(33.333% - 6px);
+	flex: 1 1 calc(50% - 6px);
 	max-width: 100%;
 	min-width: 200px;
 	height: 100%;
@@ -223,11 +223,11 @@ footer p a:hover {
 
 
 
-@media only screen and (min-width: 400px) {
+/*@media only screen and (min-width: 400px) {
 	html {
 		font-size: 9px;
 	}
-}
+}*/
 
 @media only screen and (min-width: 550px) {
 	html {
