--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,13 @@ a {
 	background-color: #333;
 	position: fixed;
 	top: 0;
-	width: 100%
+	width: 100%;
+	box-shadow: 0 2px 10px black;
+	-webkit-box-shadow: 0 2px 10px black;
+	   -moz-box-shadow: 0 2px 10px black;
+	        box-shadow: 0 2px 10px black;
+	
+	/*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
 }
 
 #navbar a {
