--- a/public/style.css
+++ b/public/style.css
@@ -98,15 +98,12 @@ a {
 	display: flex;
 	flex: 1 1 33.333%;
 	align-items: center;
+	justify-content: center;
 }
 
 #mainImage img {
 	width: 100%;
 	margin: 0;
-}
-
-#mainImage img:nth-of-type(2), #mainImage img:nth-of-type(3) {
-	display: none;
 }
 
 #info {
@@ -255,18 +252,12 @@ footer p a:hover {
 }
 
 @media only screen and (min-width: 500px) {
-	#mainImage img:nth-of-type(2) {
-		display: block;
-	}
 	#mainImage img {
 		width: 50%;
 	}
 }
 
 @media only screen and (min-width: 700px) {
-	#mainImage img:nth-of-type(2), #mainImage img:nth-of-type(3) {
-		display: block;
-	}
 	#mainImage img {
 		width: 33.333%;
 	}
