--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,6 @@ a {
 	width: 100%;
 	box-shadow: 0 2px 10px black;
 	-webkit-box-shadow: 0 2px 10px black;
-	   -moz-box-shadow: 0 2px 10px black;
 	        box-shadow: 0 2px 10px black;
 	
 	/*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
@@ -95,10 +94,18 @@ a {
 
 #mainImage {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex: 1 1 33.333%;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 1 33.333%;
+	        flex: 1 1 33.333%;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 #mainImage img {
@@ -139,13 +146,20 @@ a {
 }
 
 #services {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: start;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: start;
 }
 
 #services div {
-	flex: 1 1 calc(50% - 6px);
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 1 calc(50% - 6px);
+	        flex: 1 1 calc(50% - 6px);
 	min-width: 280px;
 }
 
@@ -156,9 +170,16 @@ a {
 
 #photos .images .column {
 	margin-top: 1rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex: 1 1 calc(50% - 6px);
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 1 calc(50% - 6px);
+	        flex: 1 1 calc(50% - 6px);
 	max-width: 100%;
 	min-width: 200px;
 	height: 100%;
@@ -167,13 +188,17 @@ a {
 
 .column img {
 	max-width: 100%;
-	align-self: start;
+	-ms-flex-item-align: start;
+	    align-self: start;
 	margin: 6px 0 0 0;
 }
 
 #photos .images {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 #contact {
