--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@ a {
 	box-shadow: 0 2px 10px black;
 	-webkit-box-shadow: 0 2px 10px black;
 	        box-shadow: 0 2px 10px black;
-	
+	z-index: 100;
 	/*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
 }
 
